@@ -1,5 +1,7 @@
 ## 5.6.2
 
+- New: Android 14 support
+- Fixed: broken splash screen animation on Android 14
 - Fixed: deprecated Google Play developer profile link
 - Fixed: buttons state changing during navigation transition
 - Fixed: inconsistent app screen transitions
